modern-app/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-modernization
  labels:
    app: portfolio-modernization
    app.kubernetes.io/name: portfolio-modernization
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: portfolio-modernization
